Modify buildNumber to 1.1.00005